# ragate-affordance-localization

./: .gitignore  CODE_AND_MODEL_AVAILABILITY.md  LICENSE  LOCAL_REPRO_STATUS.md  README.md  pyproject.toml  requirements-smoke.txt  requirements.txt  run.py
datasets/: README.md
docs/: dinov3_source_strategy.md  fusion_cache_contract.md  fusion_runtime_contract.md  geometry_runtime_contract.md  interaction_batch_contract.md  interaction_runtime_contract.md  public_api.md  release_checklist.md  release_extension_points.md  release_open_questions.md  release_status.md  release_usage.md  sd21_local_model_contract.md  umd_dataset_contract.md
fusion_zero_shot/: README.md  run_agd20k_eval.py
interaction_probing/: README.md
models/: README.md
pba/: __init__.py  audit.py  config.py  planner.py  public_release.py  release_gaps.py  reproduce.py  run.py  runner.py  validation.py
scripts/: audit_release_readiness.sh  check_public_release.sh  reproduce_main.sh
tests/: test_data_affordance.py  test_data_geometry.py  test_dinov3_source_strategy.py  test_fusion_adaptive_gate.py  test_fusion_cache_contract.py  test_fusion_cache_docs.py  test_fusion_config_kontext.py  test_fusion_kontext_reuse.py  test_fusion_paths.py  test_fusion_prompts.py  test_fusion_runtime_contract.py  test_fusion_runtime_docs.py  test_geometry_config.py  test_geometry_head_stats.py  test_geometry_linear_probe_eval.py  test_geometry_linear_probe_train.py  test_geometry_multiseed.py  test_geometry_runtime_contract.py  test_geometry_runtime_docs.py  test_interaction_attention_outputs.py  test_pba_run.py  (+24 more)
(+156 files in other folders)
